spacing fix, and fixed a bug with short stories

--- a/styles/desktop.less
+++ b/styles/desktop.less
@@ -1,6 +1,4 @@
-body {
-  font-family: Helvetica, Arial
-}
+@import "shared.less";
 
 .wrapper {
   width: 700px;
@@ -8,7 +6,7 @@ body {
 }
 
 .article {
-  margin-bottom: 40px;
+  margin-bottom: 25px;
 }
 
 h2.title {
@@ -21,15 +19,6 @@ h2.title {
   font-family: Helvetica Neue Light, Helvetica, Arial;
   font-weight: 300;
   color: lighten(gray, 15%);
-}
-
-a {
-  text-decoration: none;
-  text-decoration-line: none
-}
-
-a:visited, a:active {
-  color: darken(purple, 10%);
 }
 
 a.more {
