--- a/styles/mobile.less
+++ b/styles/mobile.less
@@ -1,6 +1,6 @@
-body {
-  font-family: Helvetica, Arial
-}
+@import "shared.less";
+
+
 
 .wrapper {
   margin-left: 30px;
@@ -23,16 +23,10 @@ h1 {
   color: lighten(gray, 15%);
 }
 
-a {
-  text-decoration: none;
-  text-decoration-line: none
-}
 
-a:visited, a:active {
-  color: darken(purple, 10%);
-}
 
 a.more {
   display: inline-block;
   font-size: 12px;
+  white-space: nowrap;
 }
